# aggregate-root

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aggregate_root/: __init__.py  aggregate_root.py  domain_event.py  events.py  repository.py
tests/: test_aggregate_root.py  test_aggregate_root_inheritance.py  test_domain_event.py  test_sample.py  test_state_event.py
