[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aggregate-root"
version = "0.0.3"
authors = [
  { name="Jeremy Willemse", email="jeremy@willemse.co" },
]
description = "A small Python library for defining domain-driven design aggregates and domain events."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/willemse-and-co/aggregate-root"
Issues = "https://github.com/willemse-and-co/aggregate-root/issues"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.2.1"
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "src"
